# task-jogger-jogseq

./: CHANGELOG.rst  README.rst  jog.py  requirements.txt  setup.cfg
jogger_logseq_jira/tasks/: seq.py
jogseq/: exceptions.py  utils.py
jogseq/tasks/: seq.py
jogseq/utils/: blocks.py  duration.py  logseq.py
