[flake8]
exclude =
    .git
    .venv
max-line-length = 119
max-complexity = 10
ignore =
    # blank line contains whitespace
    W293

[isort]
skip =
    .git
    .venv
line_length = 99
wrap_length = 79
multi_line_output = 5

[jogger:lint]
fable_exclude =
    ./dist
    ./.venv

[metadata]
name = task-jogger-logseq-jira
version = attr: jogger_logseq_jira.__version__
author = Alex Church
author_email = alex@church.id.au
description = A plugin for jogger that provides an interactive synchronisation tool for Logseq and Jira
long_description = file: README.rst
license = MIT
url = https://github.com/oogles/task-jogger-logseq-jira
project_urls =
    Bug Tracker = https://github.com/oogles/task-jogger-logseq-jira/issues
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
